<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/login_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dohyeon_regular"
            android:gravity="center"
            android:text="@string/register_view"
            android:textColor="#f06292"
            android:textSize="26sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_tos_info" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_tos_1"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register_tos_1_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:maxLines="10"
            android:padding="8dp"
            android:scrollbars="vertical" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_decline"
                android:layout_marginHorizontal="16dp"/>

            <RadioButton
                android:id="@+id/register_tos_check_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_agree"/>
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_tos_2"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register_tos_2_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:maxLines="10"
            android:padding="8dp"
            android:scrollbars="vertical" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_decline"
                android:layout_marginHorizontal="16dp"/>

            <RadioButton
                android:id="@+id/register_tos_check_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_agree"/>
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/register_id"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/register_pw"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/register_password_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/register_pw_recheck"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/register_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/register_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:hint="@string/register_address"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <Button
            android:id="@+id/register_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/register_btn" />

    </LinearLayout>
</ScrollView>