<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="26sp"
        android:textColor="#f06292"
        android:fontFamily="@font/dohyeon_regular"
        android:text="@string/login_view"
        android:layout_alignStart="@id/login_box"
        android:layout_above="@id/login_box"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:background="@drawable/round_box_bg">

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/login_id"
            android:inputType="textNoSuggestions"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_pw"/>

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/login_pw"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:layout_constraintTop_toBottomOf="@id/login_id"
            app:layout_constraintBottom_toTopOf="@id/login_btn"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            app:layout_constraintTop_toBottomOf="@id/login_pw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/login_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_btn"
            app:layout_constraintTop_toBottomOf="@id/login_pw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <TextView
        android:id="@+id/login_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/login_skip"
        android:layout_below="@id/login_box"
        android:layout_alignStart="@id/login_box"/>

</RelativeLayout>