<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/user_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:stretchColumns="1"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TableRow>

            <TextView
                android:id="@+id/user_id_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id_header" />

            <EditText
                android:id="@+id/user_id_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="none" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/user_name_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_header" />

            <EditText
                android:id="@+id/user_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="none" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/user_phone_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phone_header" />

            <EditText
                android:id="@+id/user_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="phone" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/user_address_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_address_header" />

            <EditText
                android:id="@+id/user_address_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="textPostalAddress" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/user_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/user_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_table" />

</androidx.constraintlayout.widget.ConstraintLayout>