<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".AddProductFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addproduct_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addproduct_choose_image"
        android:src="@drawable/no_photo"/>

    <Button
        android:id="@+id/addproduct_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addproduct_choose_image"
        app:layout_constraintStart_toEndOf="@id/addproduct_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/addproduct_image"/>

    <EditText
        android:id="@+id/addproduct_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:inputType="text"
        android:hint="@string/addproduct_title"
        app:layout_constraintTop_toBottomOf="@id/addproduct_image"/>

    <EditText
        android:id="@+id/addproduct_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:inputType="number"
        android:hint="@string/addproduct_price"
        app:layout_constraintTop_toBottomOf="@id/addproduct_title"/>

    <Button
        android:id="@+id/addproduct_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/addproduct_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>